[package]
name = "example1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
# TODO update this when on crates-io!
bevy_animation_state_machine = { path = "../../bevy_animation_state_machine" }
